--- a/index.html
+++ b/index.html
@@ -1095,7 +1095,7 @@
     <!-- Back to Top Button -->
     <button class="back-to-top" id="backToTop" onclick="scrollToTop()">↑</button>
 
-    <script src="translations.js"></script>
-    <script src="app.js"></script>
+    <script type="module" src="translations.js"></script>
+    <script type="module" src="app.js"></script>
 </body>
 </html>
